self-managed/api-gw/ingress-hashicups-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-api
  namespace: default
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: Exact
        value: /api
    backendRefs:
    - kind: Service
      name: public-api
      namespace: default
      port: 8080
